[SITE] print: fix spacing for not spaced stuff
begin of page

adjusts of font size too

--- a/Site/Presentation/Assets/css/print_Print.css
+++ b/Site/Presentation/Assets/css/print_Print.css
@@ -114,7 +114,8 @@ img,
 .resizer,
 .block-changer,
 .screen-action,
-.play
+.play,
+.debug
 {
 	display: none;
 }
